deploy-cirros.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwebsite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: vipu1212/website:0.2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: website
