deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: vipu1212/website:0.2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: website
  externalIPs:
    - 35.208.66.244
---
apiVersion: v1
kind: Service
metadata:
  name: ubuntu
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
<<<<<<< HEAD
    app: uploader
  externalIPs:
    - 35.208.66.244
=======
    name: ubuntu
>>>>>>> 5b7c72f5ebd7192a38b709273d2a651e8e1a48a2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ig-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
      - path: /ubuntu
        pathType: Prefix
        backend:
          service:
            name: ubuntu
            port:
              number: 80
