ingress.deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ig-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
  - host: kubevirt.divyan.sh
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
      - path: /ubuntu
        pathType: Prefix
        backend:
          service:
            name: ubuntu
            port:
              number: 80
